tests/baselines/reference/ClassAndModuleThatMergeWithModulesExportedStaticFunctionUsingClassPrivateStatics.errors.txt
ClassAndModuleThatMergeWithModulesExportedStaticFunctionUsingClassPrivateStatics.ts(8,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
ClassAndModuleThatMergeWithModulesExportedStaticFunctionUsingClassPrivateStatics.ts(11,24): error TS2341: Property 'sfn' is private and only accessible within class 'clodule<T>'.


==== ClassAndModuleThatMergeWithModulesExportedStaticFunctionUsingClassPrivateStatics.ts (2 errors) ====
    class clodule<T> {
        id: string;
        value: T;
    
        private static sfn(id: string) { return 42; }
    }
    
    module clodule {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        // error: duplicate identifier expected
        export function fn<T>(x: T, y: T): number {
            return clodule.sfn('a');
                           ~~~
!!! error TS2341: Property 'sfn' is private and only accessible within class 'clodule<T>'.
        }
    }
    
    